--- a/app/src/main/res/layout/menu_item_activity.xml
+++ b/app/src/main/res/layout/menu_item_activity.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_gravity="center|top"
+    android:layout_marginTop="10dp"
+    android:layout_width="350dp"
     app:cardElevation="4dp"
     android:layout_height="200dp">
 
@@ -18,7 +20,7 @@
             android:background="@color/colorOverlayBackground"
             android:id="@+id/menu_txt"
             android:text="Name of Menu"
-            style="@style/OpenSanBoldPinkTxt"
+            style="@style/OpenSanBoldTxt"
             android:gravity="center"
             android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
