--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorBlack">#000</color>
 
     <color name="colorOverlayBackground">#7f333639</color>
+    <color name="colorTransparent">#00FFFFFF</color>
 </resources>
