--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -53,6 +53,7 @@
             <android.support.v7.widget.CardView
                 app:cardElevation="5dp"
                 app:cardUseCompatPadding="true"
+                app:cardBackgroundColor="#FFFFFF"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <LinearLayout
