--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -53,7 +53,7 @@
             <android.support.v7.widget.CardView
                 app:cardElevation="5dp"
                 app:cardUseCompatPadding="true"
-                app:cardBackgroundColor="#FFFFFF"
+                app:cardBackgroundColor="@color/colorPrimary"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <LinearLayout
@@ -61,11 +61,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <TextView
+                        android:paddingVertical="10dp"
+                        android:paddingLeft="10dp"
                         android:id="@+id/food_name"
-                        android:layout_marginTop="8dp"
-                        android:padding="12dp"
                         android:text="Food Name"
-                        style="@style/OpenSanBoldPinkTxt"
+                        style="@style/OpenSanBigBoldTxt"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
                     <LinearLayout
@@ -74,14 +74,16 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <ImageView
-                            android:src="@drawable/money_icon"
+                            android:paddingBottom="10dp"
+                            android:src="@drawable/money_white_icon"
                             android:layout_weight="1"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content" />
                         <TextView
+                            android:paddingBottom="10dp"
                             android:id="@+id/food_price"
                             android:text="Food Price"
-                            style="@style/OpenSanBoldPinkTxt"
+                            style="@style/OpenSanBigBoldTxt"
                             android:layout_weight="9"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content" />
@@ -99,39 +101,23 @@
                             <!--android:layout_weight="1"-->
                             <!--android:layout_width="0dp"-->
                             <!--android:layout_height="wrap_content" />-->
-                        <!--<Button-->
-                            <!--android:id="@+id/map_link"-->
-                            <!--android:text="MAP"-->
-                            <!--style="@style/OpenSanBoldTxt"-->
-                            <!--android:background="@drawable/round_button_pink"-->
-                            <!--android:layout_weight="1"-->
-                            <!--android:layout_width="0dp"-->
-                            <!--android:layout_height="wrap_content" />-->
+                        <Button
+                            android:id="@+id/map_link"
+                            android:text="MAP"
+                            style="@style/OpenSanBoldPinkTxt"
+                            android:background="@drawable/round_button"
+                            android:layout_weight="1"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content" />
                     </LinearLayout>
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
-            <android.support.v7.widget.CardView
-                app:cardElevation="5dp"
-                app:cardUseCompatPadding="true"
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_food"
+                android:scrollbars="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <!--<android.support.v7.widget.RecyclerView-->
-                    <!--android:id="@+id/recycler_food_not"-->
-                    <!--android:scrollbars="vertical"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>-->
-                <!--<TextView-->
-                    <!--android:id="@+id/food_description"-->
-                    <!--android:layout_marginTop="12dp"-->
-                    <!--android:lineSpacingMultiplier="1.5"-->
-                    <!--android:padding="12dp"-->
-                    <!--android:text="Description"-->
-                    <!--style="@style/OpenSanBoldPinkTxt"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content" />-->
-            </android.support.v7.widget.CardView>
+                android:layout_height="match_parent"/>
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
