--- a/app/src/main/res/layout/food_item_activity.xml
+++ b/app/src/main/res/layout/food_item_activity.xml
@@ -16,14 +16,41 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
         <TextView
+            android:paddingVertical="10dp"
             android:background="@color/colorOverlayBackground"
-            android:id="@+id/food_txt"
-            android:text="Name of Menu"
-            style="@style/OpenSanBoldPinkTxt"
-            android:gravity="center"
+            android:id="@+id/food_name_txt"
+            android:text="Name of Food"
+            style="@style/OpenSanBigBoldTxt"
+            android:gravity="left"
+            android:paddingLeft="10dp"
             android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/food_price_txt"
+            style="@style/OpenSanBigBoldTxt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/food_name_txt"
+            android:layout_alignBottom="@+id/food_name_txt"
+            android:layout_toLeftOf="@+id/imageView2"
+            android:layout_toStartOf="@+id/imageView2"
+            android:gravity="right"
+            android:text="Price of Food" />
+
+        <ImageView
+
+            android:id="@+id/imageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignTop="@+id/food_name_txt"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/money_white_icon" />
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
